--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ python_version = '3.8'
 
 [packages]
 fastapi = "~=0.74"
+uvicorn = {extras = ["standard"], version = "~=0.11"}
+pydantic = "~=1.9"
 
 [dev-packages]
 pytest = "~=7.0"
+flake8 = "~=4.0"
