--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ python_version = '3.8'
 [packages]
 fastapi = "~=0.74"
 uvicorn = {extras = ["standard"], version = "~=0.11"}
-pydantic = "~=1.9"
+pydantic = {extras = ["email"], version = "~=1.9"}
 
 [dev-packages]
 pytest = "~=7.0"
