--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ python_version = '3.8'
 fastapi = "~=0.74"
 uvicorn = {extras = ["standard"], version = "~=0.11"}
 pydantic = {extras = ["email"], version = "~=1.9"}
+sqlalchemy = "~=1.4"
 
 [dev-packages]
 pytest = "~=7.0"
