--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ fastapi = "~=0.74"
 uvicorn = {extras = ["standard"], version = "~=0.11"}
 pydantic = {extras = ["email"], version = "~=1.9"}
 sqlalchemy = "~=1.4"
+sqlalchemy-utils = "~=0.38"
 
 [dev-packages]
 pytest = "~=7.0"
