--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,9 @@ uvicorn = {extras = ["standard"], version = "~=0.11"}
 pydantic = {extras = ["email"], version = "~=1.9"}
 sqlalchemy = "~=1.4"
 sqlalchemy-utils = "~=0.38"
+requests = "~=2.27"
 
 [dev-packages]
 pytest = "~=7.0"
 flake8 = "~=4.0"
+requests-mock = "~=1.9"
